--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js"
   },
   "repository": {
@@ -20,5 +20,8 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
     "@hapi/joi": "^17.1.1"
+  },
+  "devDependencies": {
+    "jest": "^28.1.1"
   }
 }
